Draw selected background for right half of double width char if selected

BUG: 468465
(cherry picked from commit 4a16ab981ed741fefac2d2eb491040a3ec6b4fff)